--- a/src/templates/sections/synthetics/section-features/_index.scss
+++ b/src/templates/sections/synthetics/section-features/_index.scss
@@ -10,6 +10,39 @@
     }
 
     .tab {
+      position: relative;
+
+      &::before {
+        @include size(662px, 718px);
+
+        position: absolute;
+        bottom: -150px;
+        right: -150px;
+        background-image: url('../img/gradient-2.webp');
+        background-size: cover;
+        background-position: 50% 50%;
+        filter: blur(150px);
+        opacity: 0.15;
+        z-index: -1;
+        content: '';
+
+        @include media-breakpoint-up(sm) {
+          @include size(1000px, 682px);
+
+          bottom: -80px;
+          right: 265px;
+        }
+
+        @include media-breakpoint-up(md) {
+          right: 50%;
+          bottom: -20px;
+          transform: translateX(50%);
+        }
+
+        @include media-breakpoint-up(xl) {
+          @include size(1471px, 1024px);
+        }
+      }
 
       &__header {
         display: none;
@@ -35,7 +68,7 @@
 
       &__item {
         @include make-spacer('pr', 15);
-        @include make-spacer('pr', 0, sm);
+        @include make-spacer('pr', 0, md);
         @include flex($align-items: center);
 
         position: relative;
@@ -107,7 +140,7 @@
             &__icon {
 
               &::after {
-                display: none;
+                opacity: 0;
               }
             }
           }
@@ -195,10 +228,14 @@
       }
 
       &__section {
-        display: none;
+        height: 0;
+        overflow: hidden;
+        opacity: 0;
+        transition: opacity 1s ease-out;
 
         &--active {
-          display: block;
+          height: auto;
+          opacity: 1;
         }
       }
 
@@ -214,38 +251,6 @@
         @include media-breakpoint-up(xxl) {
           grid-template-columns: 1fr 766px;
           column-gap: 155px;
-        }
-
-        &::before {
-          @include size(662px, 718px);
-
-          position: absolute;
-          bottom: -150px;
-          right: -150px;
-          background-image: url('../img/gradient-2.webp');
-          background-size: cover;
-          background-position: 50% 50%;
-          filter: blur(150px);
-          opacity: 0.15;
-          z-index: -1;
-          content: '';
-
-          @include media-breakpoint-up(sm) {
-            @include size(1000px, 682px);
-
-            bottom: -80px;
-            right: 265px;
-          }
-
-          @include media-breakpoint-up(md) {
-            right: 50%;
-            bottom: -20px;
-            transform: translateX(50%);
-          }
-
-          @include media-breakpoint-up(xl) {
-            @include size(1471px, 1024px);
-          }
         }
 
         position: relative;
