--- a/src/templates/sections/index.pug
+++ b/src/templates/sections/index.pug
@@ -18,3 +18,9 @@ include ./synthetics/section-features/_index
 include ./synthetics/section-use-cases/_index
 include ./synthetics/section-process/_index
 include ./synthetics/section-near-future/_index
+
+include ./production/section-how-it-work/_index
+include ./production/section-for-you/_index
+include ./production/section-product-header/_index
+include ./production/section-production/_index
+include ./production/section-virtual-production/_index
