--- a/src/templates/sections/index.scss
+++ b/src/templates/sections/index.scss
@@ -21,3 +21,9 @@
 @import './synthetics/section-use-cases/index';
 @import './synthetics/section-process/index';
 @import './synthetics/section-near-future/index';
+
+@import './production/section-how-it-work/index';
+@import './production/section-for-you/index';
+@import './production/section-product-header/index';
+@import './production/section-production/index';
+@import './production/section-virtual-production/index';
