--- a/src/templates/production.pug
+++ b/src/templates/production.pug
@@ -23,8 +23,9 @@ block content
 
   +nav(menu, 'production').nav--inner#nav
   main
-    +section-production#section-production
-    +section-virtual-production#section-virtual-production
+    +section-our-solution.section--our-solution
+    +section-production.container-additional#section-production
+    +section-virtual-production.container-additional#section-virtual-production
     +section-request(
       [
       "Get in touch.",
