--- a/src/templates/sections/header/dropdown/_index.pug
+++ b/src/templates/sections/header/dropdown/_index.pug
@@ -8,6 +8,6 @@ mixin dropdown(page)
     .dropdown__toggle
       a(href="./stylist.html" class=page === 'stylist' && 'dropdown__item--active').dropdown__item Mannequin Stylist
       a(href="./synthetics.html" class=page === 'synthetics' && 'dropdown__item--active').dropdown__item Mannequin Synthetics
+      a(href="./production.html" class=page === 'production' && 'dropdown__item--active').dropdown__item Mannequin Production
       hr.dropdown__divider
-      a.dropdown__item.dropdown__item--disabled Mannequin Robotics
       a.dropdown__item.dropdown__item--disabled Peruka
