--- a/src/templates/sections/home/section-product/_index.pug
+++ b/src/templates/sections/home/section-product/_index.pug
@@ -57,10 +57,10 @@ mixin section-product
               [
                 'product-3'
               ],
-              true,
+              false,
               2,
               'pink'
-            ).card--pink
+            )(href='./production.html').card--pink.card--done
 
           .item.js-item-animation
             +card(
