--- a/src/templates/sections/index.pug
+++ b/src/templates/sections/index.pug
@@ -24,3 +24,4 @@ include ./production/section-for-you/_index
 include ./production/section-product-header/_index
 include ./production/section-production/_index
 include ./production/section-virtual-production/_index
+include ./production/section-our-solution/_index
