--- a/src/templates/sections/index.scss
+++ b/src/templates/sections/index.scss
@@ -27,3 +27,4 @@
 @import './production/section-product-header/index';
 @import './production/section-production/index';
 @import './production/section-virtual-production/index';
+@import './production/section-our-solution/index';
