--- a/src/templates/production.pug
+++ b/src/templates/production.pug
@@ -26,6 +26,7 @@ block content
     +section-our-solution.section--our-solution
     +section-production.container-additional#section-production
     +section-virtual-production.container-additional#section-virtual-production
+    +section-description.section--description
     +section-request(
       [
       "Get in touch.",
