--- a/src/templates/sections/index.pug
+++ b/src/templates/sections/index.pug
@@ -25,3 +25,4 @@ include ./production/section-product-header/_index
 include ./production/section-production/_index
 include ./production/section-virtual-production/_index
 include ./production/section-our-solution/_index
+include ./production/section-description/_index
