--- a/src/templates/sections/index.scss
+++ b/src/templates/sections/index.scss
@@ -28,3 +28,4 @@
 @import './production/section-production/index';
 @import './production/section-virtual-production/index';
 @import './production/section-our-solution/index';
+@import './production/section-description/index';
