--- a/src/scss/base/variables/_typography.scss
+++ b/src/scss/base/variables/_typography.scss
@@ -63,9 +63,13 @@ h2,
 
 h3,
 .h3 {
-  @include font-size(40px, 45px);
+  @include font-size(35px, 45px);
 
   @include media-breakpoint-up(sm) {
+    @include font-size(40px, 55px);
+  }
+
+  @include media-breakpoint-up(md) {
     @include font-size(60px, 70px);
   }
 
