- section can work

--- a/src/templates/sections/index.pug
+++ b/src/templates/sections/index.pug
@@ -26,3 +26,4 @@ include ./production/section-production/_index
 include ./production/section-virtual-production/_index
 include ./production/section-our-solution/_index
 include ./production/section-description/_index
+include ./production/section-can-work/_index
