--- a/src/templates/sections/index.scss
+++ b/src/templates/sections/index.scss
@@ -29,3 +29,4 @@
 @import './production/section-virtual-production/index';
 @import './production/section-our-solution/index';
 @import './production/section-description/index';
+@import './production/section-can-work/index';
