--- a/src/templates/components/bullet/_index.scss
+++ b/src/templates/components/bullet/_index.scss
@@ -23,4 +23,24 @@
     font-weight: var(--typography-bold);
     color: var(--color-title);
   }
+
+  &--pink {
+
+    .bullet {
+
+      &__icon {
+        background-color: var(--color-primary);
+      }
+    }
+  }
+
+  &--lg {
+
+    .bullet {
+
+      &__icon {
+        @include size(45px);
+      }
+    }
+  }
 }
