--- a/src/templates/production.pug
+++ b/src/templates/production.pug
@@ -24,6 +24,7 @@ block content
   +nav(menu, 'production').nav--inner#nav
   main
     +section-our-solution.section--our-solution
+    +section-can-work.section--can-work#section-can-work
     +section-production.container-additional#section-production
     +section-virtual-production.container-additional#section-virtual-production
     +section-description.section--description
