- section can work done

--- a/src/templates/components/bullet/_index.scss
+++ b/src/templates/components/bullet/_index.scss
@@ -39,7 +39,11 @@
     .bullet {
 
       &__icon {
-        @include size(45px);
+        @include size(35px);
+
+        @include media-breakpoint-up(xl) {
+          @include size(45px);
+        }
       }
     }
   }
