--- a/src/templates/sections/production/section-description/_index.pug
+++ b/src/templates/sections/production/section-description/_index.pug
@@ -3,9 +3,9 @@ mixin section-description
     .container-fluid
       .container
         .grid
-          .grid__column
+          .grid__column.js-item-animation
             h3.title In any of the scenarios above, you have the opportunity to create multiple digital models
             p.text of any ethnicity, hair style, hair color, eys, etc. based on just one source photo of the model or mannequin.
-          .grid__column
+          .grid__column.js-item-animation
             .image
               +picture('production/product', 'Product')
