- section can work done

--- a/src/templates/production.pug
+++ b/src/templates/production.pug
@@ -23,6 +23,7 @@ block content
 
   +nav(menu, 'production').nav--inner#nav
   main
+    +section-photo-block.section--photo-block
     +section-our-solution.section--our-solution
     +section-can-work.section--can-work#section-can-work
     +section-production.container-additional#section-production
