--- a/src/templates/sections/index.pug
+++ b/src/templates/sections/index.pug
@@ -27,3 +27,4 @@ include ./production/section-virtual-production/_index
 include ./production/section-our-solution/_index
 include ./production/section-description/_index
 include ./production/section-can-work/_index
+include ./production/section-photo-block/_index
