--- a/src/templates/sections/index.scss
+++ b/src/templates/sections/index.scss
@@ -30,3 +30,4 @@
 @import './production/section-our-solution/index';
 @import './production/section-description/index';
 @import './production/section-can-work/index';
+@import './production/section-photo-block/index';
