--- a/src/templates/sections/production/section-description/_index.pug
+++ b/src/templates/sections/production/section-description/_index.pug
@@ -1,7 +1,7 @@
 mixin section-description
   section.section&attributes(attributes)
     .container-fluid
-      .container
+      .container.container--gradient
         .grid
           .grid__column.js-item-animation
             h3.title In any of the scenarios above, you have the opportunity to create multiple digital models
