--- a/src/templates/sections/production/section-our-solution/_index.pug
+++ b/src/templates/sections/production/section-our-solution/_index.pug
@@ -1,11 +1,10 @@
 mixin section-our-solution
   section.section&attributes(attributes)
     .container-fluid
-      .container
+      .container.container--gradient
         .block
           .status.js-item-animation
             img(src="./img/solution.webp").img
-
           .grid
             .item.js-item-animation
               .item__picture
