--- a/src/templates/sections/production/section-photo-block/_index.pug
+++ b/src/templates/sections/production/section-photo-block/_index.pug
@@ -1,7 +1,7 @@
 mixin section-photo-block
   section.section&attributes(attributes)
     .container-fluid
-      .container
+      .container.container--gradient-alt
         .block
           h4.title MANNEQUIN PRODUCTION
           .description
