--- a/src/templates/production.pug
+++ b/src/templates/production.pug
@@ -26,8 +26,8 @@ block content
     +section-photo-block.section--photo-block
     +section-our-solution.section--our-solution
     +section-can-work.section--can-work#section-can-work
-    +section-production.container-additional#section-production
-    +section-virtual-production.container-additional#section-virtual-production
+    +section-production.container-additional.section--production#section-production
+    +section-virtual-production.container-additional.section--virual-production#section-virtual-production
     +section-description.section--description
     +section-request(
       [
